--- a/ProyectoFinalKermesse/Views/IngresoComunidadDets/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/IngresoComunidadDets/Index.cshtml
@@ -25,6 +25,18 @@
 
 <div class="container">
 
+    <hr />
+    @using (Html.BeginForm())
+    {
+        <div class="container">
+            <p>
+                Buscar por Control Bono: @Html.TextBox("valorBusq")
+                <input type="submit" value="Buscar" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" />
+            </p>
+        </div>
+
+    }
+
     <table class="table">
         <tr>
             <th>
